--- a/public/views/hikeDetails.html
+++ b/public/views/hikeDetails.html
@@ -33,6 +33,13 @@
          </div>
       </div>
    </div>
+   <div class="hike-billboard">
+      <div class="hike-photo-box">
+         <div class="hike-photos">
+           
+         </div>
+      </div>
+   </div>
    <div class="hike-lower-info">
       <div class="weather">
          <weather-dir info="hikeDetail"></weather-dir>
