Fixed a sizing issue with the custom hike filters

--- a/public/views/explore.html
+++ b/public/views/explore.html
@@ -14,7 +14,8 @@
          <div class="centered"><h4>Advanced Filters</h4></div>
       </div>
       <div class="expandable">
-         <div class="filter-box">
+        <div class="filters">
+          <div class="filter-box">
             <p class="mid-caps">Difficulty</p>
             <div class="flex-holder"><div class="flex-edge"><p>Easy: </p></div><div class="flex-edge"><input type="checkbox" ng-model="filter.difficulty"/></div></div>
             <div class="flex-holder"><div class="flex-edge"><p>Medium: </p></div><div class="flex-edge"><input type="checkbox" ng-model="filter.difficulty"/></div></div>
@@ -35,6 +36,7 @@
             <div class="flex-holder"><div class="flex-edge"><p>Waterfall: </p></div><div class="flex-edge"><input type="checkbox" ng-model="filter.difficulty"/></div></div>
             <div class="flex-holder"><div class="flex-edge"><p>City-side: </p></div><div class="flex-edge"><input type="checkbox" ng-model="filter.difficulty"/></div></div>
          </div>
+        </div>
       </div>
    </div>
    <div class="hike-search-results">
