--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -654,12 +654,15 @@ a:link, a:visited, a:hover, a:active {
 .expandable {
    display: none;
    width: 100%;
+   .filters {
+     display: flex;
+     flex-flow: row nowrap;
+     justify-content: space-between;
+   }
    .filter-box{
-      margin: 10px 2%;
+      margin: 10px;
       padding: 10px;
-      display: inline-block;
-      vertical-align: middle;
-      width: 30%;
+      flex: 1 1 30%;
       height: 130px;
       border: 1px dashed #665;
       .flex-holder {
