--- a/public/views/explore.html
+++ b/public/views/explore.html
@@ -17,24 +17,25 @@
         <div class="filters">
           <div class="filter-box">
             <p class="mid-caps">Difficulty</p>
-            <div class="flex-holder"><div class="flex-edge"><p>Easy: </p></div><div class="flex-edge"><input type="checkbox" ng-model="filter.difficulty"/></div></div>
-            <div class="flex-holder"><div class="flex-edge"><p>Medium: </p></div><div class="flex-edge"><input type="checkbox" ng-model="filter.difficulty"/></div></div>
-            <div class="flex-holder"><div class="flex-edge"><p>Hard: </p></div><div class="flex-edge"><input type="checkbox" ng-model="filter.difficulty"/></div></div>
-            <div class="flex-holder"><div class="flex-edge"><p>Strenuous: </p></div><div class="flex-edge"><input type="checkbox" ng-model="filter.difficulty"/></div></div>
+            <div class="select-box">
+              <select ng-model="filter.diffText" ng-options="diff.value as diff.name for diff in diffTypes">
+              </select>
+            </div>
          </div>
-         <div class="filter-box">
+         <!--<div class="filter-box">
             <p class="mid-caps">Hike Length</p>
-            <div class="flex-holder"><div class="flex-edge"><p>0-2 Miles: </p></div><div class="flex-edge"><input type="checkbox" ng-model="filter.difficulty"/></div></div>
-            <div class="flex-holder"><div class="flex-edge"><p>2-5 Miles: </p></div><div class="flex-edge"><input type="checkbox" ng-model="filter.difficulty"/></div></div>
-            <div class="flex-holder"><div class="flex-edge"><p>5-8 Miles: </p></div><div class="flex-edge"><input type="checkbox" ng-model="filter.difficulty"/></div></div>
-            <div class="flex-holder"><div class="flex-edge"><p>8 + Miles: </p></div><div class="flex-edge"><input type="checkbox" ng-model="filter.difficulty"/></div></div>
-         </div>
+            <div>
+              <select ng-model="filter.mileslong" ng-options="length.value as length.name for length in lengthTypes">
+                <option>{{diff.name}}</option>
+              </select>
+            </div>
+         </div>-->
          <div class="filter-box">
             <p class="mid-caps">Features</p>
-            <div class="flex-holder"><div class="flex-edge"><p>Peak: </p></div><div class="flex-edge"><input type="checkbox" ng-model="filter.difficulty"/></div></div>
-            <div class="flex-holder"><div class="flex-edge"><p>Lake: </p></div><div class="flex-edge"><input type="checkbox" ng-model="filter.difficulty"/></div></div>
-            <div class="flex-holder"><div class="flex-edge"><p>Waterfall: </p></div><div class="flex-edge"><input type="checkbox" ng-model="filter.difficulty"/></div></div>
-            <div class="flex-holder"><div class="flex-edge"><p>City-side: </p></div><div class="flex-edge"><input type="checkbox" ng-model="filter.difficulty"/></div></div>
+            <div class="select-box">
+              <select ng-model="filter.feature" ng-options="feat.value as feat.name for feat in featTypes">
+              </select>
+            </div>
          </div>
         </div>
       </div>
