--- a/public/views/home.html
+++ b/public/views/home.html
@@ -69,7 +69,7 @@
    </div>
 </div>
 <div class="floating-hike-box" ng-if="foundHike">
-   <div class="success-box" ng-if="foundHike.name">
+   <div class="success-box">
       <h1>Hike Found!</h1>
       <div class="hike-info">
          <h4>{{foundHike.name}}</h4>
@@ -78,11 +78,6 @@
       <div class="button-area">
          <button class="main-button" ui-sref="hikeDetails({hikeName:foundHike.name})">Take Me to the Details</button>
       </div>
-   </div>
-   <div class="fail-box" ng-if="!foundHike.name">
-      <h1>Hmm... no luck.</h1>
-      <h4>Looks like no hikes exist with those requirements.</h4>
-      <button class="main-button" ui-sref-opts="{reload: true}">Let's Try Again</button>
    </div>
 </div>
 
