Fixed styling on home page

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -26,7 +26,7 @@
       <p>Instahike searches through hundreds of local trails so you don't have to.<br>Just select a few trail preferences, and you'll be on your way.</p>
       <div class="questions">
          <div class="q-box">
-            <h2><span class="num">(1)</span>  Select Your Hike Length</h2>
+            <h4>Select Your Hike Length</h4>
             <div class="little-box-holder">
                <div class="little-box" ng-model="length1" ng-class="box1Class" ng-click="setLength(0.0, 2.0)">
                   <img src="./../img/logo/hike-logo-short.png"/>
@@ -43,7 +43,7 @@
             </div>
          </div>
          <div class="q-box">
-            <h2><span class="num">(2)</span>  Select A Feature</h2>
+            <h4>Select A Feature</h4>
             <div class="little-box-holder">
                <div class="little-box" ng-model="feature1" ng-class="box4Class" ng-click="setFeature('lake')">
                   <img src="./../img/logo/feature-logo-lake.png"/>
