Added a blank prepare page

--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -183,6 +183,10 @@ a:link, a:visited, a:hover, a:active {
    background: url('../img/bg/explore-bg.jpg') no-repeat center center fixed;
 }
 
+.learn-bg {
+   background: url('../img/bg/learn-bg.jpg') no-repeat center center fixed;
+}
+
 .profile-bg {
    background: url('../img/bg/profile-bg.jpg') no-repeat center center fixed;
 }
