--- a/public/views/navTemplate.html
+++ b/public/views/navTemplate.html
@@ -5,6 +5,7 @@
    <nav class="main-nav">
       <ul>
          <li ui-sref="explore"><h6>Explore</h6></li>
+         <li ui-sref="prepare"><h6>Prepare</h6></li>
          <li ng-if="!user"><h6><a href="/auth">Login</a></h6></li>
          <li ng-if="!user"><a href="/auth"><img src="../img/user-icon-100-light.png"></a></li>
          <li ng-if="user" ng-click="logout()"><h6>Logout</h6></li>
