--- a/public/views/home.html
+++ b/public/views/home.html
@@ -23,7 +23,7 @@
 <div class="front-content">
    <div class="main-info" fade-in-dir>
       <h1>The Perfect Hike. <span class="emphasis"> In Two Questions.</span></h1>
-      <p>Instahike searches through hundreds of local trails so you don't have to.<br>Just select a few trail preferences, and you'll be on your way.</p>
+      <p>Instahike searches through hundreds of local trails so you don't have to.<br>Select a few trail preferences, and instahike will match you to the nearest trail .</p>
       <div class="questions">
          <div class="q-box">
             <h4>Select Your Hike Length</h4>
