--- a/public/nav/ham.scss
+++ b/public/nav/ham.scss
@@ -20,7 +20,7 @@
   position: absolute;
   height: 3px;
   width: 100%;
-  background: #ddd;
+  background: #ccc;
   border-radius: 1.5px;
   opacity: 1;
   left: 0;
@@ -53,7 +53,7 @@
   transform: rotate(-50deg);
   width: 50%;
   top: 10%;
-  left: 25%;
+  left: 15%;
 }
 
 .ham-menu.open span:nth-child(2){
@@ -61,7 +61,7 @@
   -moz-transform: rotate(60deg);
   -o-transform: rotate(60deg);
   transform: rotate(60deg);
-  left: 40%;
+  left: 30%;
 }
 
 .ham-menu.open span:nth-child(3){
@@ -71,7 +71,7 @@
   transform: rotate(45deg);
   width:35%;
   top: 22%;
-  left: 21%;
+  left: 11%;
 }
 
 .ham-menu.open span:nth-child(4){
@@ -81,6 +81,6 @@
   transform: rotate(-65deg);
   width: 70%;
   top: 35%;
-  left: -25%;
+  left: -35%;
 }
 
