--- a/public/nav/nav.scss
+++ b/public/nav/nav.scss
@@ -11,19 +11,36 @@
   .main-nav{
     display: block;
   }
-  .ham-menu{
+  .ham-menu, .mobile-menu{
     display: none;
   }
 }
 
 .nav-bar {
+   font-family: 'Patua One', sans-serif;
    position: fixed;
    top: 0px;
    width: 100%;
    height: 80px;
    background-color: #212;
-   z-index: 1;
-   transition: background-color 0.6s;
+   z-index: 2;
+   ul{
+     list-style: none;
+     position: absolute;
+     right: 30px;
+   }
+   li{
+      display: inline-block;
+      height: 80px;
+      line-height: 80px;
+      padding-left: 25px;
+      color: white;
+      img {
+        height: 40px;
+        border-radius: 20px;
+        vertical-align: middle;
+      }
+   }
 
    .left-nav{
       position: absolute;
@@ -35,23 +52,37 @@
    }
 }
 
-.main-nav {
-   position: absolute;
-   right: 30px;
-   font-family: 'Patua One', sans-serif;
-   ul {
-      list-style: none;
-      li {
-         display: inline-block;
-         height: 80px;
-         line-height: 81px;
-         padding: 0 13px;
-         color: white;
-         img {
-            height: 38px;
-            border-radius: 19px;
-            vertical-align: middle;
-         }
-      }
+.mobile-menu{
+  position: fixed;
+  top: 40px;
+  left: 0;
+  width: 100%;
+  z-index: 1;
+  background-color: #434;
+  height: 40px;
+  line-height: 38px;
+  ul{
+    list-style: none;
+    position: absolute;
+    right: 30px;
    }
+   li{
+    display: inline-block;
+    height: 80px;
+    line-height: 80px;
+    padding-left: 25px;
+    color: white;
+   }
+  -webkit-transform: translate(0, 0);
+  -moz-transform: translate(0, 0);
+  -o-transform: translate(0, 0);
+  transform: translate(0, 0);
+  -webkit-transition: .2s ease-out;
+  -moz-transition: .2s ease-out;
+  -o-transition: .2s ease-out;
+  transition: .2s ease-out;
+}
+
+.menu-extend{
+  transform: translate(0, 40px);
 }
